--- a/Styles/dashboard.css
+++ b/Styles/dashboard.css
@@ -245,11 +245,11 @@ a {
   justify-content: space-between;
   background-color: var(--clr-bg-light2-gray);
 }
-.category .box .welcome .text h2 {
+.title {
   font-size: 24px;
   margin-bottom: 10px;
 }
-.category .box .welcome .text p {
+.under-title {
   color: var(--clr-secondary);
   margin-bottom: 16px;
 }
@@ -335,14 +335,6 @@ a {
   border-radius: 6px;
   overflow: hidden;
 }
-.draft h2 {
-  margin-bottom: 10px;
-  font-size: 24px;
-}
-.draft p {
-  color: var(--clr-secondary);
-  margin-bottom: 20px;
-}
 .draft input,
 .draft textarea {
   width: 100%;
@@ -362,6 +354,120 @@ a {
   min-height: 180px;
 }
 /* draft box */
+/* Target box */
+.targets {
+  padding: 20px;
+  background-color: white;
+  border-radius: 6px;
+}
+.targets .projects,
+.targets .team,
+.targets .money {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  margin-bottom: 20px;
+}
+.targets .col {
+  flex: 1;
+}
+.targets i {
+  display: inline-block;
+  color: var(--clr-main-blue);
+  background-color: var(--clr-light-blue);
+  height: 80px;
+  width: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-weight: 600;
+}
+.targets .money i {
+  color: var(--clr-main-blue);
+  background-color: var(--clr-light-blue);
+}
+.targets .projects i {
+  color: var(--clr-main-orange);
+  background-color: var(--clr-light-orange);
+}
+.targets .team i {
+  color: var(--clr-main-green);
+  background-color: var(--clr-light-green);
+}
+.targets .col span {
+  color: var(--clr-secondary);
+}
+.targets .col p {
+  margin: 5px 0px 10px 0px;
+  font-weight: bold;
+}
+.targets .col .prog-holder {
+  width: 100%;
+  height: 4px;
+}
+.targets .money .col .prog-holder {
+  background-color: var(--clr-light-blue);
+}
+.targets .projects .col .prog-holder {
+  background-color: var(--clr-light-orange);
+}
+.targets .team .col .prog-holder {
+  background-color: var(--clr-light-green);
+}
+.targets .col .prog-holder .prog {
+  height: 4px;
+  position: relative;
+}
+.targets .money .col .prog-holder .prog {
+  background-color: var(--clr-main-blue);
+}
+.targets .projects .col .prog-holder .prog {
+  background-color: var(--clr-main-orange);
+}
+.targets .team .col .prog-holder .prog {
+  background-color: var(--clr-main-green);
+}
+.targets .col .prog-holder .prog::before {
+  content: attr(prog-data);
+  position: absolute;
+  padding: 2px 5px;
+  color: white;
+  top: -29px;
+  right: 0;
+  transform: translateX(50%);
+  border-radius: 6px;
+  font-size: 12px;
+  font-weight: 600;
+}
+.targets .money .col .prog-holder .prog::before {
+  background-color: var(--clr-main-blue);
+}
+.targets .projects .col .prog-holder .prog::before {
+  background-color: var(--clr-main-orange);
+}
+.targets .team .col .prog-holder .prog::before {
+  background-color: var(--clr-main-green);
+}
+.targets .col .prog-holder .prog::after {
+  content: "";
+  position: absolute;
+  border-style: solid;
+  border-width: 6px;
+  top: -10px;
+  right: 0;
+  transform: translateX(50%);
+}
+.targets .money .col .prog-holder .prog::after {
+  border-color: var(--clr-main-blue) transparent transparent transparent;
+}
+.targets .projects .col .prog-holder .prog::after {
+  border-color: var(--clr-main-orange) transparent transparent transparent;
+}
+.targets .team .col .prog-holder .prog::after {
+  border-color: var(--clr-main-green) transparent transparent transparent;
+}
+/* Target box */
 /* end category section */
 /* end main */
 /* end content */
