--- a/Styles/dashboard.css
+++ b/Styles/dashboard.css
@@ -508,6 +508,156 @@ a {
   font-size: 12px;
 }
 /* tickets statistic */
+/* news */
+.news {
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
+}
+.news .col {
+  display: flex;
+  align-items: center;
+  padding-top: 20px;
+  margin-top: 20px;
+}
+.news .col:nth-of-type(1) {
+  padding-top: 0px;
+}
+.news .col:not(:nth-of-type(1)) {
+  border-top: solid 1px var(--clr-bg-light2-gray);
+}
+.news .col img {
+  width: 100px;
+  max-width: 100%;
+  border-radius: 6px;
+  margin-right: 15px;
+}
+.news .col .info {
+  flex: 1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.news .col .info .under-title {
+  margin-bottom: 0px;
+}
+.semi-title {
+  font-size: 16px;
+  margin-bottom: 6px;
+  font-weight: 700;
+}
+.details {
+  padding: 4px 10px;
+  background-color: var(--clr-bg-light2-gray);
+  font-size: 13px;
+  font-weight: 500;
+  border-radius: 6px;
+  text-align: center;
+}
+@media (max-width: 768px) {
+  .news .col {
+    flex-direction: column;
+    text-align: center;
+    gap: 15px;
+  }
+  .news .col .info {
+    flex-direction: column;
+    gap: 15px;
+  }
+}
+/* news */
+/* tasks */
+.tasks {
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
+}
+.tasks .col {
+  padding-top: 15px;
+  margin-top: 15px;
+  display: flex;
+  align-items: center;
+}
+.tasks .text {
+  flex: 1;
+}
+.tasks .text .under-title {
+  margin-bottom: 0px;
+}
+.tasks .col:not(:nth-of-type(1)) {
+  border-top: solid 1px var(--clr-bg-light2-gray);
+}
+.tasks i {
+  transition: var(--main-transition);
+  cursor: pointer;
+}
+.tasks i:hover {
+  color: var(--clr-main-red);
+  transition: var(--main-transition);
+}
+.tasks .col:nth-of-type(4) {
+  opacity: 0.3;
+}
+.tasks .col:nth-of-type(4) h3,
+.tasks .col:nth-of-type(4) p {
+  text-decoration: line-through;
+}
+/* tasks */
+/* search */
+.search {
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
+}
+.search .text {
+  display: flex;
+  justify-content: space-between;
+}
+.search .col {
+  display: flex;
+  justify-content: space-between;
+  padding: 15px 0px;
+}
+/* search */
+/* uploads */
+.uploads {
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
+}
+.uploads .col {
+  display: flex;
+  align-items: center;
+  padding-top: 10px;
+  margin-top: 10px;
+}
+.uploads .col:not(:nth-of-type(1)) {
+  border-top: solid 1px var(--clr-bg-light2-gray);
+}
+.uploads .col .info {
+  flex: 1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.uploads .col .info .text {
+  flex: 1;
+}
+.uploads .col .info .text .semi-title {
+  font-weight: 600;
+}
+.uploads .col .info .text .under-title {
+  margin: 0;
+}
+.uploads .col .info .text .semi-title {
+  height: fit-content;
+}
+.uploads .col img {
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
+}
+/* uploads */
 /* end category section */
 /* end main */
 /* end content */
