--- a/Styles/dashboard.css
+++ b/Styles/dashboard.css
@@ -791,6 +791,196 @@ a {
   border-left: solid 2px var(--clr-main-red);
 }
 /* reminders */
+/* post */
+.post {
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
+}
+.post .title {
+  margin-bottom: 25px;
+}
+.post .user {
+  display: flex;
+  align-items: center;
+}
+.post .user img {
+  width: 48px;
+  height: 48px;
+  margin-right: 15px;
+}
+.post .user p {
+  margin: 0;
+}
+.post .description {
+  margin: 20px 0px;
+  padding: 20px 0px;
+  border-top: solid 1px var(--clr-bg-light2-gray);
+  border-bottom: solid 1px var(--clr-bg-light2-gray);
+}
+.post .description p {
+  font-size: 16px;
+  line-height: 1.8;
+  font-weight: 450;
+}
+@media (max-width: 768px) {
+  .post .description p {
+    text-align: center;
+  }
+}
+.post .social-iter {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: var(--clr-secondary);
+}
+/* post */
+/* social media */
+.social-media {
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
+}
+.social-media .title {
+  margin-bottom: 25px;
+}
+.social-media .twitter,
+.social-media .facebook,
+.social-media .youtube,
+.social-media .linkedin {
+  margin-bottom: 10px;
+  padding: 15px 15px 15px 70px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+}
+.social-media span {
+  font-weight: 600;
+}
+.social-media a {
+  font-size: 13px;
+  color: white;
+}
+.social-media .twitter {
+  background-color: rgb(29 161 242 / 20%);
+  color: #1da1f2;
+}
+.social-media .twitter i,
+.social-media .twitter a {
+  background-color: #1da1f2;
+}
+.social-media .facebook {
+  background-color: rgb(24 119 242 / 20%);
+  color: #1da1f2;
+}
+.social-media .facebook i,
+.social-media .facebook a {
+  background-color: #1877f2;
+}
+.social-media .youtube {
+  background-color: rgb(255 0 0 / 20%);
+  color: #ff0000;
+}
+.social-media .youtube i,
+.social-media .youtube a {
+  background-color: #ff0000;
+}
+.social-media .linkedin {
+  background-color: rgb(0 119 181 / 20%);
+  color: #0077b5;
+}
+.social-media .linkedin i,
+.social-media .linkedin a {
+  background-color: #0077b5;
+}
+.social-media .twitter i,
+.social-media .facebook i,
+.social-media .youtube i,
+.social-media .linkedin i {
+  position: absolute;
+  color: white;
+  left: 0;
+  top: 0;
+  font-size: 2em;
+  width: 52px;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: var(--main-transition);
+}
+.social-media i:hover {
+  transition: var(--main-transition);
+  transform: rotate(5deg);
+}
+/* social media */
+/* projects */
+.projects {
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
+  margin-top: 20px;
+}
+.projects .title {
+  margin-bottom: 20px;
+}
+/* .projects .responsive-table {
+  overflow-x: auto;
+} */
+.projects table {
+  min-width: 800px;
+  width: 100%;
+  border-spacing: 0;
+  font-size: 15px;
+}
+.projects th {
+  background-color: var(--clr-bg-light2-gray);
+  font-weight: bold;
+  padding: 15px;
+  text-align: left;
+}
+.projects td {
+  padding: 15px;
+  border-bottom: solid 1px var(--clr-bg-light2-gray);
+  border-left: solid 1px var(--clr-bg-light2-gray);
+}
+.projects tbody tr {
+  transition: var(--main-transition);
+}
+.projects tbody tr:hover {
+  transition: var(--main-transition);
+  background-color: var(--clr-bg-light1-gray);
+}
+.projects td:last-child {
+  border-right: solid 1px var(--clr-bg-light2-gray);
+}
+table tbody td img {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  padding: 2px;
+  background-color: white;
+}
+table tbody td img:not(:first-child) {
+  margin-left: -20px;
+}
+.projects tbody tr td span {
+  color: white;
+}
+.projects tbody tr td .pending {
+  background-color: var(--clr-main-orange);
+}
+.projects tbody tr td .in-progress {
+  background-color: var(--clr-main-blue);
+}
+.projects tbody tr td .completed {
+  background-color: var(--clr-main-green);
+}
+.projects tbody tr td .rejected {
+  background-color: var(--clr-main-red);
+}
+/* projects */
 /* end category section */
 /* end main */
 /* end content */
