--- a/Styles/settings.css
+++ b/Styles/settings.css
@@ -225,7 +225,13 @@ a {
   grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
   gap: 20px;
 }
-
+.box {
+  width: 100%;
+  border-radius: 10px;
+  background-color: white;
+  overflow: hidden;
+  padding: 20px;
+}
 .title {
   font-size: 24px;
   margin-bottom: 10px;
@@ -233,6 +239,25 @@ a {
 .description {
   color: var(--clr-secondary);
   margin-bottom: 20px;
+}
+.semi-title {
+  font-size: 16px;
+  font-weight: 500;
+  margin: 0;
+}
+.under-semi-title {
+  font-size: 13px;
+  color: var(--clr-secondary);
+  margin: 5px 0px 13px;
+}
+.details {
+  padding: 4px 10px;
+  background-color: var(--clr-bg-light2-gray);
+  font-size: 16px;
+  font-weight: 550;
+  border-radius: 6px;
+  text-align: center;
+  color: black;
 }
 @media (max-width: 768px) {
   .content .main {
@@ -281,29 +306,12 @@ a {
   color: var(--clr-main-blue);
   transition: var(--main-transition);
 }
-.control {
-  width: 100%;
-  border-radius: 10px;
-  background-color: white;
-  overflow: hidden;
-  padding: 20px;
-}
-.semi-title {
-  font-size: 16px;
-  font-weight: 500;
-  margin: 0;
-}
-.under-semi-title {
-  font-size: 13px;
-  color: var(--clr-secondary);
-  margin: 5px 0px 13px;
-}
 .control > div {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.control label {
+label {
   display: flex;
   align-items: center;
 }
@@ -318,6 +326,235 @@ a {
   border-radius: 6px;
   margin-top: 10px;
   font-size: 13px;
+  color: black;
 }
+/* General Info */
+.general-info label {
+  margin-bottom: 10px;
+  color: var(--clr-secondary);
+  font-size: 14px;
+  display: block;
+}
+.general-info input {
+  padding: 10px;
+  width: 100%;
+  border-radius: 6px;
+  border: var(--clr-bg-light3-gray) solid 1px;
+  outline: none;
+  margin-bottom: 10px;
+}
+.general-info form .email input {
+  margin: 0;
+  background-color: var(--clr-bg-light-blue);
+}
+.general-info form .email input:hover {
+  cursor: no-drop;
+}
+.general-info .email {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.general-info a {
+  color: var(--clr-main-blue);
+  font-size: 16px;
+  margin-left: 10px;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+}
+/* End General Info */
+/* security info */
+.security-info .col {
+  margin-bottom: 15px;
+  padding-bottom: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.security-info .col:nth-of-type(1) a {
+  background-color: var(--clr-main-blue);
+  color: white;
+  padding: 4px 10px;
+  border-radius: 6px;
+  font-size: 16px;
+}
+.security-info .col:not(:last-child) {
+  border-bottom: solid 1px var(--clr-bg-light2-gray);
+}
+/* End security info */
+/* social info */
+.social-info .col {
+  margin-bottom: 15px;
+  overflow: hidden;
+  border-radius: 6px;
+  display: flex;
+  border: solid 1px var(--clr-bg-light3-gray);
+}
+.social-info i {
+  height: 40px;
+  width: 40px;
+  color: var(--clr-secondary);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--clr-bg-light1-gray);
+  border-right: solid 1px var(--clr-bg-light3-gray);
+  transition: var(--main-transition);
+}
+.social-info input {
+  width: 100%;
+  padding: 1px 2px 1px 10px;
+  height: 40px;
+  background-color: var(--clr-bg-light1-gray);
+  border: none;
+  outline: none;
+  font-size: 13px;
+}
+.social-info .col:focus-within i {
+  color: black;
+  transition: var(--main-transition);
+}
+/* end social info */
+/* widgets control */
+.widgets-control .check {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+.widgets-control .check label {
+  font-size: 16px;
+  font-weight: 450;
+  cursor: pointer;
+  padding-left: 30px;
+  position: relative;
+}
+.check input[type="checkbox"] {
+  visibility: hidden;
+}
+.widgets-control .check label::before {
+  position: absolute;
+  content: "";
+  width: 14px;
+  height: 14px;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  border: solid 2px var(--clr-secondary);
+  border-radius: 4px;
+  transition: var(--main-transition);
+}
+.widgets-control .check label::after {
+  font-family: var(--fa-style-family-classic);
+  content: "\f00c";
+  font-weight: 900;
+  position: absolute;
+  top: 0;
+  left: 0px;
+  color: white;
+  width: 18px;
+  height: 18px;
+  background-color: var(--clr-main-blue);
+  font-size: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
+  transform: scale(0) rotate(360deg);
+  transition: var(--main-transition);
+}
+.widgets-control .check input[type="checkbox"]:checked + label::after {
+  transform: scale(1);
+}
+.widgets-control .check label:hover::before {
+  border: solid 2px var(--clr-main-blue);
+  transition: var(--main-transition);
+}
+/* end widgets control */
+/* backup */
+.backup .period .col {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 15px;
+}
+.backup input {
+  -webkit-appearance: none;
+  appearance: none;
+}
+.backup .period label {
+  font-weight: 450;
+  font-size: 16px;
+  position: relative;
+  transition: var(--main-transition);
+  padding-left: 30px;
+  cursor: pointer;
+}
+.backup .period label::before {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  border: solid 2px var(--clr-secondary);
+  border-radius: 50%;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+}
+.backup .period label::after {
+  content: "";
+  position: absolute;
+  width: 14px;
+  height: 14px;
+  background-color: var(--clr-main-blue);
+  left: 5px;
+  transform: scale(0);
+  border-radius: 50%;
+  transition: var(--main-transition);
+}
+.backup .period label:hover::before {
+  border: solid 2px var(--clr-main-blue);
+}
+.backup .period input[type="radio"]:checked + label::after {
+  transform: scale(1);
+}
+.backup .servers {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+  padding-top: 20px;
+  border-top: solid 1px var(--clr-bg-light2-gray);
+}
+.backup .servers .col {
+  flex: 1;
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+}
+.backup .servers .col label {
+  border: solid 2px var(--clr-bg-light2-gray);
+  border-radius: 6px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
+  cursor: pointer;
+  padding: 15px;
+  transition: var(--main-transition);
+}
+.backup .servers .col input[type="radio"]:checked + label {
+  border: var(--clr-main-blue) solid 2px;
+  color: var(--clr-main-blue);
+}
+@media (max-width: 768px) {
+  .backup .servers {
+    flex-direction: column;
+  }
+}
+/* end backup */
 /* end main */
 /* end content */
