--- a/Styles/profile.css
+++ b/Styles/profile.css
@@ -288,7 +288,7 @@ label {
 .main .profile-info .user {
   text-align: center;
   min-width: 30%;
-  border-right: solid 1px var(--clr-bg-light2-gray);
+  height: 100%;
 }
 .main .profile-info .user img {
   margin-bottom: 10px;
@@ -300,6 +300,26 @@ label {
   margin: 10px 0px 16px;
   font-size: 16px;
   color: var(--clr-secondary);
+  position: relative;
+}
+.main .profile-info .user .level-prog {
+  width: 70%;
+  display: block;
+  margin: auto;
+  height: 6px;
+  background-color: var(--clr-bg-light2-gray);
+  border-radius: 6px;
+  position: relative;
+}
+.main .profile-info .user .level-prog::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 70%;
+  height: 100%;
+  background-color: var(--clr-main-blue);
+  border-radius: 6px;
 }
 .main .profile-info .user .rate {
   margin: 10px 0px;
@@ -319,6 +339,8 @@ label {
   align-items: center;
   flex-wrap: wrap;
   transition: var(--main-transition);
+  border-radius: 0px;
+  border-left: solid 1px var(--clr-bg-light2-gray);
   border-bottom: solid 1px var(--clr-bg-light2-gray);
 }
 .main .profile-info .info .box:hover {
