--- a/Styles/projects.css
+++ b/Styles/projects.css
@@ -53,6 +53,7 @@ a {
   color: var(--clr-secondary);
   margin: 10px 0px;
   font-weight: 500;
+  line-height: 1.6;
 }
 .details {
   padding: 3px 8px;
@@ -249,14 +250,6 @@ a {
   grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
   gap: 20px;
 }
-@media (max-width: 576px) {
-  .main .projects-info {
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  }
-  .box {
-    padding-top: 30px;
-  }
-}
 .main .projects-info .box {
   position: relative;
 }
@@ -330,6 +323,21 @@ a {
 }
 .projects-info .box .price .prog-holder #blue {
   background-color: var(--clr-main-blue);
+}
+@media (max-width: 576px) {
+  .main .projects-info {
+    grid-template-columns: minmax(250px, 1fr);
+  }
+  .box {
+    padding-top: 30px;
+  }
+  .projects-info .box .price {
+    flex-direction: column;
+    gap: 10px;
+  }
+  .projects-info .box .price .prog-holder {
+    width: 160px;
+  }
 }
 @media (max-width: 768px) {
   .projects-info .box {
