Plans oage and the project done

--- a/Styles/files.css
+++ b/Styles/files.css
@@ -20,6 +20,7 @@ a {
   --clr-bg-light-blue: #f0f4f9;
   --clr-bg-light1-gray: #f6f6f6;
   --clr-bg-light2-gray: #eeeeee;
+  --clr-bg-light3-gray: #ccc;
   --clr-alt-blue: #0d69d5;
   --clr-main-blue: #0075ff;
   --clr-light-blue: #cce3ff;
