--- a/Styles/plans.css
+++ b/Styles/plans.css
@@ -21,9 +21,10 @@ a {
   --clr-bg-light1-gray: #f6f6f6;
   --clr-bg-light2-gray: #eeeeee;
   --clr-bg-light3-gray: #ccc;
-  --clr-main-orange: #f59e0b;
   --clr-main-blue: #0075ff;
   --clr-main-red: #f44336;
+  --clr-main-orange: #f59e0b;
+  --clr-main-green: #22c55e;
   --main-transition: 0.3s;
 }
 ::-webkit-scrollbar {
@@ -45,18 +46,7 @@ a {
   border-radius: 10px;
   padding: 20px;
 }
-.name {
-  font-size: 16px;
-  font-weight: bold;
-}
-.job {
-  font-size: 13px;
-  color: var(--clr-secondary);
-  margin: 5px 0px 13px;
-  font-weight: 500;
-}
 /* END GLOBAL RULES */
-/* START PAGE SECTION */
 .page {
   display: flex;
 }
@@ -238,87 +228,94 @@ a {
   width: 40px;
   background-color: black;
 }
-/* start friends info */
-.friends-info {
+/* start plans */
+.plans {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
   gap: 20px;
 }
-.friends-info .box .user {
+.plans .box .col {
+  padding: 20px;
   text-align: center;
-}
-.friends-info .box .user img {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  margin: 10px 0px;
-}
-.friends-info .box .info {
-  position: relative;
-  margin: 15px 0px;
-  padding: 15px 0px;
-  font-size: 14px;
-  font-weight: 500;
-  border-top: solid 1px var(--clr-bg-light2-gray);
-  border-bottom: solid 1px var(--clr-bg-light2-gray);
-}
-.friends-info .box .contact i {
-  padding: 10px;
-  color: #666;
-  background-color: var(--clr-bg-light2-gray);
-  font-size: 13px;
-  border-radius: 50%;
-  transition: var(--main-transition);
-  cursor: pointer;
-}
-.friends-info .box .contact i:hover {
   color: white;
-  background-color: var(--clr-main-blue);
 }
-.friends-info .box .info .vip {
-  font-size: 40px;
-  color: var(--clr-main-orange);
-  opacity: 0.2;
-  position: absolute;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
-.friends-info .box .info i {
-  margin-right: 5px;
-}
-.friends-info .box .info .col:not(:last-child) {
+.plans .box .col h2 {
+  font-size: 24px;
   margin-bottom: 10px;
 }
-.friends-info .box .links {
+.plans .box .col .price {
+  font-size: 40px;
+  font-weight: 500;
+  width: fit-content;
+  margin: auto;
+  position: relative;
+}
+.plans .box .col .price span {
+  position: absolute;
+  left: -20px;
+  top: 0;
+  font-size: 25px;
+}
+.plans .box .bg-green {
+  background-color: var(--clr-main-green);
+  border: double 8px white;
+}
+.plans .box .bg-blue {
+  background-color: var(--clr-main-blue);
+  border: double 8px white;
+}
+.plans .box .bg-orange {
+  background-color: var(--clr-main-orange);
+  border: double 8px white;
+}
+.plans .box ul {
+  margin: 10px 0px;
+}
+.plans .box ul li {
+  padding: 15px 0px;
+  font-size: 15px;
+  font-weight: 500;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-bottom: solid 1px var(--clr-bg-light2-gray);
 }
-.friends-info .box .links span {
+.plans .box ul li .yes {
+  color: var(--clr-main-green);
+}
+.plans .box ul li .no {
+  color: var(--clr-main-red);
+}
+.plans .box ul li .help {
   color: var(--clr-secondary);
-  font-size: 13px;
+  cursor: pointer;
 }
-.friends-info .box .links a {
-  padding: 4px 10px;
-  font-size: 13px;
+.plans .box a {
+  display: block;
+  width: fit-content;
+  font-size: 16px;
+  font-weight: 500;
   color: white;
-  background-color: var(--clr-main-blue);
+  padding: 4px 10px;
   border-radius: 6px;
 }
-.friends-info .box .links .delete {
-  background-color: var(--clr-main-red);
+.plans .box .join-free {
+  background-color: var(--clr-main-green);
+}
+.plans .box .join-basic {
+  background-color: var(--clr-main-blue);
+}
+.plans .Premium p {
+  text-align: center;
+  color: var(--clr-secondary);
+  font-size: 16px;
+  font-weight: 500;
+  margin-top: 20px;
 }
 @media (max-width: 768px) {
-  .friends-info {
-    grid-template-columns: minmax(200px, 1fr);
+  .plans {
+    grid-template-columns: minmax(250px, 1fr);
   }
 }
-@media (max-width: 576px) {
-  .friends-info .box .links {
-    flex-direction: column;
-    gap: 10px;
-  }
-}
-/* end friends info */
+/* end plans */
 /* end main */
